<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationBar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".NavigationBar">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="166dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/helvetica_family"
            android:text="@string/self_guided_title"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/firstFloor"
            style="@style/ButtonStyle"
            android:layout_marginTop="30dp"
            android:background="#FFFFFF"
            android:onClick="floorClick"
            android:text="@string/floor1_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

        <Button
            android:id="@+id/secondFloor"
            style="@style/ButtonStyle"
            android:layout_marginTop="20dp"
            android:onClick="floorClick"
            android:text="@string/floor2_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstFloor" />

        <Button
            android:id="@+id/thirdFloor"
            style="@style/ButtonStyle"
            android:layout_marginTop="20dp"
            android:onClick="floorClick"
            android:text="@string/floor3_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondFloor" />

        <Button
            android:id="@+id/fourthFloor"
            style="@style/ButtonStyle"
            android:layout_marginTop="20dp"
            android:onClick="floorClick"
            android:text="@string/floor4_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thirdFloor" />

        <Button
            android:id="@+id/fifthFloor"
            style="@style/ButtonStyle"
            android:layout_marginTop="20dp"
            android:onClick="floorClick"
            android:text="@string/floor5_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fourthFloor" />

        <Button
            android:id="@+id/sixthFloor"
            style="@style/ButtonStyle"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:onClick="floorClick"
            android:text="@string/floor6_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fifthFloor" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>